--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "bson": "0.4.23",
     "curling": "^1.0.0",
     "gitlog": "^3.3.0",
+    "marked": "^1.1.2",
     "node-uuid": "1.4.0",
-    "qs": "0.0.6",
+    "qs": "^0.0.6",
     "set-or-get": "^1.0.0",
     "url-parse": "^1.4.0"
   }
