--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bson": "^0.4.23",
     "curling": "^1.0.0",
     "dotty": "^0.1.0",
+    "elliptic": "^6.5.3",
     "gitlog": "^3.0.0",
     "highcharts": "^8.0.0",
     "macfromip": "^1.1.0",
